tmp/httpproxy-podinfo-frontend-tls.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: frontend 
  namespace: apps-podinfo
spec:
  virtualhost:
      fqdn: contour.devsres.com
      tls:
        secretName: ingress
  routes:
    - conditions:
      - prefix: /
      services:
        - name: frontend
          port: 80
